# prompt-injection-core

./: .gitignore  ACADEMIC_PAPER_DETAILED_STRUCTURE.md  CHANGELOG.md  COMMIT_SUGGESTION.md  ESTRUCTURA_FINAL.md  LICENSE  NEXT_STEPS_REFINEMENT.md  PAPER_WRITING_TEMPLATES.md  PERSONA_LLaVA_Technical_Evaluation.ipynb  README.md  README_UPDATED.md  README_old.md  REORGANIZATION_SUMMARY.md  demo_complete.py  evaluate_model.py  filosofia.md  model_evaluation_report.json  pyproject.toml  roadmap.md  test_api.py  test_cli.py  test_quick.py  test_scanner.py
docs/: ATTACK_COMPARISON_ANALYSIS.md  ROADMAP_CONTROLES.md  amenazas.md  controles.md  controles_avanzados.md  filosofia.md  investigacion_avanzada.md  pipeline.md  roadmap.md  social_media_content.md
docs/en/: README.md  controls.md  philosophy.md  pipeline.md  roadmap.md  threats.md
docs/paper/: BIBLIOGRAPHY_GUIDE.md  WRITING_ROADMAP.md
docs/project_status/: PROYECTO_COMPLETADO_RESUMEN.md
docs/visualizations/: VISUAL_REFERENCE_GUIDE.md
examples/: example_ml_detector_thresholds_compare.py  example_scanner.py
phase1_input_security/: README.md
phase1_input_security/adversarial_examples/: COLAB_EXECUTION_GUIDE.md  COLAB_FIXES_SUMMARY.md  ENHANCED_IMPROVEMENTS.md  GOOGLE_COLAB_GUIDE.md  PERSONA_LLaVA_Complete_Colab.ipynb  PERSONA_LLaVA_Technical_Evaluation.ipynb  README_TECHNICAL.md  REORGANIZATION_PLAN.md  RESEARCH_PAPER_STRUCTURE.md  attack_comparison.py  attack_taxonomy.py  create_fixed_zip.py  demo_attack_comparison.py  generate_visualizations.py  gpt4v_budget_testing.py  real_model_validator.py  simplified_attack_analysis.py
phase1_input_security/adversarial_examples/archive/: executive_summary.py  install_llava.sh  llava_lightweight_testing.py  llava_real_testing.py  llava_ultralight.py  requirements_llava.txt  setup_llava_testing.py  simple_simulator.py  test_llava_simple.py  test_ocr_attacks.py  test_plan.json  test_simulator.py  validate_attacks.py
phase1_input_security/adversarial_examples/attack_generators/: __init__.py  ocr_injection.py  pipeline_positioning.py  visual_roleplay.py
phase1_input_security/adversarial_examples/comparison_results/: comparison_report.json  ocr_results.json  pipeline_results.json
phase1_input_security/prompt_injection/: README.md  __init__.py  cli.py  core.py  core_backup.py  debug_umbral.py  demo_complete.py  evaluate_model.py  persona_scanner.py  quick_analysis.py  test_casos_usuario.py  test_real_training.py  test_threshold_fix.py  test_thresholds.py
phase1_input_security/prompt_injection/data/: README.md  (+4 more)
phase2_data_security/: README.md
phase3_extraction/: README.md
phase4_infrastructure/: README.md
phase5_ethics/: README.md
prompt_injection_core/: __init__.py  cli.py  core.py  core_fixed.py
prompt_injection_core/detectors/: __init__.py  base.py  jailbreak.py  leak.py  ml_detector.py  models.py  roleplay.py
prompt_injection_core/scanner/: scanner.py
research/adversarial/: educational_disguise.py
scripts/: dataset_validate.py  model_train.py  predict_batch.py  process_datasets.py  update_imports.py  validate_dataset.py  validate_monorepo.py
src/core/: __init__.py  base_detector.py  scanner.py  types.py
test_cases/pipeline_attacks/: pipeline_attack_0000_metadata.json  pipeline_attack_0000_metadata.txt  pipeline_attack_0001_metadata.json  pipeline_attack_0001_metadata.txt  pipeline_attack_0002_metadata.json  pipeline_attack_0002_metadata.txt  pipeline_attack_0003_metadata.json  pipeline_attack_0003_metadata.txt
tests/: test_cli.py  test_prompts_en.py  test_scanner.py
(+27 files in other folders)
