[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-injection-core"
version = "0.1.0"
description = "Librería básica para detectar vulnerabilidades de prompt injection en LLMs"
authors = [{name = "Juan Pablo Baquero", email = "baquerojuan99@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.scripts]
prompt-injection-scan = "prompt_injection_core.cli:main"

[project.urls]
Homepage = "https://github.com/JuanBaquero99/prompt-injection-core"
Repository = "https://github.com/JuanBaquero99/prompt-injection-core"
Documentation = "https://github.com/JuanBaquero99/prompt-injection-core#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["prompt_injection_core*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=prompt_injection_core --cov-report=term-missing"