[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-ai-security"
version = "2.0.0"
description = "PERSONA - Comprehensive AI Security Toolkit Monorepo - 5 phases covering complete AI model lifecycle security"
authors = [{name = "Juan Pablo Baquero", email = "baquerojuan99@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.3.0",
    "joblib>=1.1.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "datasets>=2.0.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.scripts]
prompt-injection-scan = "phase1_input_security.prompt_injection.cli:main"

[project.urls]
Homepage = "https://github.com/JuanBaquero99/prompt-injection-core"
Repository = "https://github.com/JuanBaquero99/prompt-injection-core"
Documentation = "https://github.com/JuanBaquero99/prompt-injection-core#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "phase1_input_security*", "phase2_data_security*", "phase3_extraction*", "phase4_infrastructure*", "phase5_ethics*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=prompt_injection_core --cov-report=term-missing"